--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MVVMComposew4"
         tools:targetApi="31">
         <activity
-            android:name=".modelview.ViewModel"
+            android:name=".presentation.modelview.ViewModel"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.MVVMComposew4">
